common/applications/influxdb/extensions/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb
  annotations:
    external-dns.kubernetes.io/provider: internal
spec:
  parentRefs:
    - name: influxdb-listeners
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - influxdb.${LOCAL_INTERNAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: influxdb
          port: 80
